@@ -1,3 +1,8 @@
+2008-11-29  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/37735
+	* gfortran.dg/alloc_comp_assign_7.f90: New test.
+
 2008-11-27  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/36526
